--- a/examples/cohere.ipynb
+++ b/examples/cohere.ipynb
@@ -2,11 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c7c709c4-0dbe-4f82-8ee6-f4cf2fd55b68",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 1,
+   "id": "e6c24b1f-9f4f-400e-8091-62d976fb1e16",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -37,13 +35,13 @@
     "# %env COHERE_API_KEY=DbXsjb7RZS06UvUwtQYlnOpalsi0GV18zq17uSGV\n",
     "import os\n",
     "COHERE_API_KEY=os.environ[\"COHERE_API_KEY\"]\n",
-    "%reload_ext jupyter_ai\n"
+    "%reload_ext jupyter_ai"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5ff352cf",
+   "execution_count": 2,
+   "id": "3337121b-9cc6-4c73-a7a9-636e9b5dc158",
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +57,7 @@
        "| `azure-chat-openai` | `OPENAI_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | This provider does not define a list of models. |\n",
        "| `cohere` | `COHERE_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | `cohere:medium`, `cohere:xlarge` |\n",
        "| `gpt4all` | Not applicable. | <abbr title=\"Not applicable\">N/A</abbr> | `gpt4all:ggml-gpt4all-j-v1.2-jazzy`, `gpt4all:ggml-gpt4all-j-v1.3-groovy`, `gpt4all:ggml-gpt4all-l13b-snoozy`, `gpt4all:mistral-7b-openorca.Q4_0`, `gpt4all:mistral-7b-instruct-v0.1.Q4_0`, `gpt4all:gpt4all-falcon-q4_0`, `gpt4all:wizardlm-13b-v1.2.Q4_0`, `gpt4all:nous-hermes-llama2-13b.Q4_0`, `gpt4all:gpt4all-13b-snoozy-q4_0`, `gpt4all:mpt-7b-chat-merges-q4_0`, `gpt4all:orca-mini-3b-gguf2-q4_0`, `gpt4all:starcoder-q4_0`, `gpt4all:rift-coder-v0-7b-q4_0`, `gpt4all:em_german_mistral_v01.Q4_0` |\n",
-       "| `huggingface_hub` | `HUGGINGFACEHUB_API_TOKEN` | <abbr title=\"You have not set this environment variable, so you cannot use this provider's models.\">❌</abbr> | See [https://huggingface.co/models](https://huggingface.co/models) for a list of models. Pass a model's repository ID as the model ID; for example, `huggingface_hub:ExampleOwner/example-model`. |\n",
+       "| `huggingface_hub` | `HUGGINGFACEHUB_API_TOKEN` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | See [https://huggingface.co/models](https://huggingface.co/models) for a list of models. Pass a model's repository ID as the model ID; for example, `huggingface_hub:ExampleOwner/example-model`. |\n",
        "| `openai` | `OPENAI_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | `openai:text-davinci-003`, `openai:text-davinci-002`, `openai:text-curie-001`, `openai:text-babbage-001`, `openai:text-ada-001`, `openai:davinci`, `openai:curie`, `openai:babbage`, `openai:ada` |\n",
        "| `openai-chat` | `OPENAI_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | `openai-chat:gpt-3.5-turbo`, `openai-chat:gpt-3.5-turbo-16k`, `openai-chat:gpt-3.5-turbo-0301`, `openai-chat:gpt-3.5-turbo-0613`, `openai-chat:gpt-3.5-turbo-16k-0613`, `openai-chat:gpt-4`, `openai-chat:gpt-4-0314`, `openai-chat:gpt-4-0613`, `openai-chat:gpt-4-32k`, `openai-chat:gpt-4-32k-0314`, `openai-chat:gpt-4-32k-0613`, `openai-chat:gpt-4-1106-preview` |\n",
        "| `qianfan` | `QIANFAN_AK`, `QIANFAN_SK` | <abbr title=\"You have not set all of these environment variables, so you cannot use this provider's models.\">❌</abbr> | `qianfan:ERNIE-Bot`, `qianfan:ERNIE-Bot-4` |\n",
@@ -153,7 +151,7 @@
        "* gpt4all:em_german_mistral_v01.Q4_0\n",
        "\n",
        "huggingface_hub\n",
-       "Requires environment variable: HUGGINGFACEHUB_API_TOKEN (not set)\n",
+       "Requires environment variable: HUGGINGFACEHUB_API_TOKEN (set)\n",
        "* See [https://huggingface.co/models](https://huggingface.co/models) for a list of models. Pass a model's repository ID as the model ID; for example, `huggingface_hub:ExampleOwner/example-model`.\n",
        "\n",
        "openai\n",
@@ -202,7 +200,7 @@
        "titan - bedrock:amazon.titan-tg1-large\n"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,8 +211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "88c7f8f6-0192-4b5e-90a1-c07ffe3b46bb",
+   "execution_count": 3,
+   "id": "287e72cc-2395-42be-a7d3-b3f092a06a3d",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +230,7 @@
        "\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,36 +241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "38fc9991-6ddc-4b89-9b73-4f31a7ccc483",
+   "execution_count": 4,
+   "id": "d2e80f43-102a-46cb-b0bd-8f5b7a3a32b8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "Registered new alias `cohere`"
-      ],
-      "text/plain": [
-       "Registered new alias `cohere`"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%ai register cohere cohere:command-xlarge-nightly"
+    "# %ai register cohere cohere:command-xlarge-nightly\n",
+    "# %ai update cohere cohere:command-xlarge-nightly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f69abe97-654c-4e4a-8d18-575deca9c935",
-   "metadata": {
-    "scrolled": true,
-    "tags": []
-   },
+   "execution_count": 12,
+   "id": "4e70899f-76e7-4400-9532-e55400513e59",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -283,7 +265,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {
       "text/html": {
        "jupyter_ai": {
@@ -296,66 +278,34 @@
     }
    ],
    "source": [
-    "%%ai cohere --format code\n",
-    "A python program that asks me for my name and then greets me by my name, in Taditional chinese"
+    "%%ai cohere:command-xlarge-nightly --format code\n",
+    "用 tkinter 建立一個視窗最上層顯示的數字型時鐘"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f39dc5e-d4f9-4240-ae8d-4441fc50fd99",
+   "execution_count": 14,
+   "id": "1f71738d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tkinter import *\n",
-    "from datetime import datetime\n",
+    "import tkinter as tk\n",
     "\n",
-    "def update_time():\n",
-    "    current_time = datetime.now().strftime(\"%H:%M:%S\")\n",
-    "    time_label.config(text=current_time)\n",
-    "    time_label.after(1000, update_time)\n",
-    "\n",
-    "root = Tk()\n",
+    "root = tk.Tk()\n",
     "root.title(\"Digital Clock\")\n",
-    "root.geometry(\"200x100\")\n",
     "\n",
-    "time_label = Label(root, font=(\"Arial\", 30), bg=\"black\", fg=\"white\")\n",
-    "time_label.pack(fill=BOTH, expand=True)\n",
+    "def digital_clock():\n",
+    "    time = tk.StringVar()\n",
+    "    time.set(str(datetime.datetime.now()))\n",
     "\n",
-    "update_time()\n",
+    "    label = tk.Label(root, textvariable=time, font=(\"Helvetica\", 48))\n",
+    "    label.pack(pady=20)\n",
     "\n",
-    "root.mainloop()\n",
+    "    label.after(200, digital_clock)\n",
     "\n",
-    "def lowest_common_multiple(a, b):\n",
-    "    if a == 0 or b == 0:\n",
-    "        return 0\n",
-    "    elif a == b:\n",
-    "        return a\n",
-    "    else:\n",
-    "        max_num = max(a, b)\n",
-    "        while True:\n",
-    "            if max_num % a == 0 and max_num % b == 0:\n",
-    "                return max_num\n",
-    "            max_num += 1\n",
-    "\n",
-    "def test_lowest_common_multiple():\n",
-    "    test_cases = [(3, 5), (10, 15), (7, 11), (12, 18), (25, 35)]\n",
-    "    expected_results = [15, 30, 77, 36, 175]\n",
-    "\n",
-    "    for i in range(len(test_cases)):\n",
-    "        result = lowest_common_multiple(test_cases[i][0], test_cases[i][1])\n",
-    "        assert result == expected_results[i], f\"Test case {i+1} failed. Expected {expected_results[i]}, but got {result}.\"\n",
-    "\n",
-    "test_lowest_common_multiple()"
+    "digital_clock()\n",
+    "root.mainloop()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9978c08c-c0da-49dd-9e01-3b9d8c9e1a5e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
