--- a/examples/commands.ipynb
+++ b/examples/commands.ipynb
@@ -302,14 +302,13 @@
       "text/markdown": [
        "| Provider | Environment variable | Set? | Models |\n",
        "|----------|----------------------|------|--------|\n",
-       "| `openai` | `OPENAI_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | `openai:babbage-002`, `openai:davinci-002`, `openai:gpt-3.5-turbo-instruct` |\n"
+       "| `cohere` | `COHERE_API_KEY` | <abbr title=\"You have not set this environment variable, so you cannot use this provider's models.\">❌</abbr> | `cohere:medium`, `cohere:xlarge` |\n"
       ],
       "text/plain": [
-       "openai\n",
-       "Requires environment variable: OPENAI_API_KEY (set)\n",
-       "* openai:babbage-002\n",
-       "* openai:davinci-002\n",
-       "* openai:gpt-3.5-turbo-instruct\n",
+       "cohere\n",
+       "Requires environment variable: COHERE_API_KEY (not set)\n",
+       "* cohere:medium\n",
+       "* cohere:xlarge\n",
        "\n"
       ]
      },
@@ -319,7 +318,7 @@
     }
    ],
    "source": [
-    "%ai list openai"
+    "%ai list cohere"
    ]
   },
   {
@@ -1340,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
