--- a/examples/code.ipynb
+++ b/examples/code.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "e0eb9a83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -U -q openai"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "c7c709c4-0dbe-4f82-8ee6-f4cf2fd55b68",
    "metadata": {
@@ -14,15 +24,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f69abe97-654c-4e4a-8d18-575deca9c935",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "AI generated code inserted below &#11015;&#65039;"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {
+      "text/html": {
+       "jupyter_ai": {
+        "model_id": "gpt-3.5-turbo",
+        "provider_id": "openai-chat"
+       }
+      }
+     },
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%ai chatgpt --format code\n",
-    "A program that asks me for my name and then greets me by my name, in Polish"
+    "A program that asks me for my name and then greets me by my name, in Traditional Chinese"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fa8084f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = input(\"Jak masz na imię? \")\n",
+    "print(\"Cześć,\", name)"
    ]
   },
   {
@@ -34,7 +76,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Jak masz na imię?  foo\n"
@@ -122,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
