--- a/examples/code.ipynb
+++ b/examples/code.ipynb
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "f69abe97-654c-4e4a-8d18-575deca9c935",
    "metadata": {
     "scrolled": true,
@@ -275,78 +275,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "AI generated code inserted below &#11015;&#65039;"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {
-      "text/html": {
-       "jupyter_ai": {
-        "model_id": "command-xlarge-nightly",
-        "provider_id": "cohere"
-       }
-      }
-     },
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Cell magic `%%ai` not found.\n"
+     ]
     }
    ],
    "source": [
     "%%ai cohere --format code\n",
     "A python program that asks me for my name and then greets me by my name, in Taditional chinese"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f39dc5e-d4f9-4240-ae8d-4441fc50fd99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tkinter import *\n",
-    "from datetime import datetime\n",
-    "\n",
-    "def update_time():\n",
-    "    current_time = datetime.now().strftime(\"%H:%M:%S\")\n",
-    "    time_label.config(text=current_time)\n",
-    "    time_label.after(1000, update_time)\n",
-    "\n",
-    "root = Tk()\n",
-    "root.title(\"Digital Clock\")\n",
-    "root.geometry(\"200x100\")\n",
-    "\n",
-    "time_label = Label(root, font=(\"Arial\", 30), bg=\"black\", fg=\"white\")\n",
-    "time_label.pack(fill=BOTH, expand=True)\n",
-    "\n",
-    "update_time()\n",
-    "\n",
-    "root.mainloop()\n",
-    "\n",
-    "def lowest_common_multiple(a, b):\n",
-    "    if a == 0 or b == 0:\n",
-    "        return 0\n",
-    "    elif a == b:\n",
-    "        return a\n",
-    "    else:\n",
-    "        max_num = max(a, b)\n",
-    "        while True:\n",
-    "            if max_num % a == 0 and max_num % b == 0:\n",
-    "                return max_num\n",
-    "            max_num += 1\n",
-    "\n",
-    "def test_lowest_common_multiple():\n",
-    "    test_cases = [(3, 5), (10, 15), (7, 11), (12, 18), (25, 35)]\n",
-    "    expected_results = [15, 30, 77, 36, 175]\n",
-    "\n",
-    "    for i in range(len(test_cases)):\n",
-    "        result = lowest_common_multiple(test_cases[i][0], test_cases[i][1])\n",
-    "        assert result == expected_results[i], f\"Test case {i+1} failed. Expected {expected_results[i]}, but got {result}.\"\n",
-    "\n",
-    "test_lowest_common_multiple()"
    ]
   },
   {
@@ -374,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
