--- a/examples/cohere.ipynb
+++ b/examples/cohere.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: cohere in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (4.44)\n",
+      "Requirement already satisfied: cohere in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (4.46)\n",
       "Requirement already satisfied: aiohttp<4.0,>=3.0 in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (from cohere) (3.9.1)\n",
       "Requirement already satisfied: backoff<3.0,>=2.0 in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (from cohere) (2.2.1)\n",
       "Requirement already satisfied: fastavro<2.0,>=1.8 in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (from cohere) (1.9.3)\n",
@@ -27,6 +27,15 @@
       "Requirement already satisfied: charset-normalizer<4,>=2 in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (from requests<3.0.0,>=2.25.0->cohere) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (from requests<3.0.0,>=2.25.0->cohere) (3.6)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in d:\\tomo.project\\jupyter-ai\\venv\\lib\\site-packages (from requests<3.0.0,>=2.25.0->cohere) (2023.11.17)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 23.3.2 -> 24.0\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -57,7 +66,7 @@
        "| `azure-chat-openai` | `OPENAI_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | This provider does not define a list of models. |\n",
        "| `cohere` | `COHERE_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | `cohere:medium`, `cohere:xlarge` |\n",
        "| `gpt4all` | Not applicable. | <abbr title=\"Not applicable\">N/A</abbr> | `gpt4all:ggml-gpt4all-j-v1.2-jazzy`, `gpt4all:ggml-gpt4all-j-v1.3-groovy`, `gpt4all:ggml-gpt4all-l13b-snoozy`, `gpt4all:mistral-7b-openorca.Q4_0`, `gpt4all:mistral-7b-instruct-v0.1.Q4_0`, `gpt4all:gpt4all-falcon-q4_0`, `gpt4all:wizardlm-13b-v1.2.Q4_0`, `gpt4all:nous-hermes-llama2-13b.Q4_0`, `gpt4all:gpt4all-13b-snoozy-q4_0`, `gpt4all:mpt-7b-chat-merges-q4_0`, `gpt4all:orca-mini-3b-gguf2-q4_0`, `gpt4all:starcoder-q4_0`, `gpt4all:rift-coder-v0-7b-q4_0`, `gpt4all:em_german_mistral_v01.Q4_0` |\n",
-       "| `huggingface_hub` | `HUGGINGFACEHUB_API_TOKEN` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | See [https://huggingface.co/models](https://huggingface.co/models) for a list of models. Pass a model's repository ID as the model ID; for example, `huggingface_hub:ExampleOwner/example-model`. |\n",
+       "| `huggingface_hub` | `HUGGINGFACEHUB_API_TOKEN` | <abbr title=\"You have not set this environment variable, so you cannot use this provider's models.\">❌</abbr> | See [https://huggingface.co/models](https://huggingface.co/models) for a list of models. Pass a model's repository ID as the model ID; for example, `huggingface_hub:ExampleOwner/example-model`. |\n",
        "| `openai` | `OPENAI_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | `openai:text-davinci-003`, `openai:text-davinci-002`, `openai:text-curie-001`, `openai:text-babbage-001`, `openai:text-ada-001`, `openai:davinci`, `openai:curie`, `openai:babbage`, `openai:ada` |\n",
        "| `openai-chat` | `OPENAI_API_KEY` | <abbr title=\"You have set this environment variable, so you can use this provider's models.\">✅</abbr> | `openai-chat:gpt-3.5-turbo`, `openai-chat:gpt-3.5-turbo-16k`, `openai-chat:gpt-3.5-turbo-0301`, `openai-chat:gpt-3.5-turbo-0613`, `openai-chat:gpt-3.5-turbo-16k-0613`, `openai-chat:gpt-4`, `openai-chat:gpt-4-0314`, `openai-chat:gpt-4-0613`, `openai-chat:gpt-4-32k`, `openai-chat:gpt-4-32k-0314`, `openai-chat:gpt-4-32k-0613`, `openai-chat:gpt-4-1106-preview` |\n",
        "| `qianfan` | `QIANFAN_AK`, `QIANFAN_SK` | <abbr title=\"You have not set all of these environment variables, so you cannot use this provider's models.\">❌</abbr> | `qianfan:ERNIE-Bot`, `qianfan:ERNIE-Bot-4` |\n",
@@ -151,7 +160,7 @@
        "* gpt4all:em_german_mistral_v01.Q4_0\n",
        "\n",
        "huggingface_hub\n",
-       "Requires environment variable: HUGGINGFACEHUB_API_TOKEN (set)\n",
+       "Requires environment variable: HUGGINGFACEHUB_API_TOKEN (not set)\n",
        "* See [https://huggingface.co/models](https://huggingface.co/models) for a list of models. Pass a model's repository ID as the model ID; for example, `huggingface_hub:ExampleOwner/example-model`.\n",
        "\n",
        "openai\n",
@@ -252,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "4e70899f-76e7-4400-9532-e55400513e59",
    "metadata": {},
    "outputs": [
@@ -265,7 +274,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {
       "text/html": {
        "jupyter_ai": {
@@ -284,27 +293,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1f71738d",
+   "execution_count": 7,
+   "id": "c89fe0b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tkinter' has no attribute 'Thread'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m time_label \u001b[38;5;241m=\u001b[39m tk\u001b[38;5;241m.\u001b[39mLabel(root, font\u001b[38;5;241m=\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHelvetica\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m24\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbold\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m     14\u001b[0m time_label\u001b[38;5;241m.\u001b[39mpack(pady\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m20\u001b[39m)\n\u001b[1;32m---> 16\u001b[0m \u001b[43mdigital_clock\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     17\u001b[0m root\u001b[38;5;241m.\u001b[39mmainloop()\n",
+      "Cell \u001b[1;32mIn[7], line 7\u001b[0m, in \u001b[0;36mdigital_clock\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m time_live \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mstrftime(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mH:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mM:\u001b[39m\u001b[38;5;124m%\u001b[39m\u001b[38;5;124mS\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      6\u001b[0m time_label\u001b[38;5;241m.\u001b[39mconfig(text\u001b[38;5;241m=\u001b[39mtime_live)\n\u001b[1;32m----> 7\u001b[0m clock_thread \u001b[38;5;241m=\u001b[39m \u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mThread\u001b[49m(target\u001b[38;5;241m=\u001b[39mdigital_clock)\n\u001b[0;32m      8\u001b[0m clock_thread\u001b[38;5;241m.\u001b[39mstart( )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'tkinter' has no attribute 'Thread'"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
-    "\n",
-    "root = tk.Tk()\n",
-    "root.title(\"Digital Clock\")\n",
+    "import time\n",
     "\n",
     "def digital_clock():\n",
-    "    time = tk.StringVar()\n",
-    "    time.set(str(datetime.datetime.now()))\n",
+    "    time_live = time.strftime(\"%H:%M:%S\")\n",
+    "    time_label.config(text=time_live)\n",
+    "    clock_thread = tk.Thread(target=digital_clock)\n",
+    "    clock_thread.start( )\n",
     "\n",
-    "    label = tk.Label(root, textvariable=time, font=(\"Helvetica\", 48))\n",
-    "    label.pack(pady=20)\n",
+    "root = tk.Tk()\n",
+    "root.title(\"數字型時鐘\")\n",
     "\n",
-    "    label.after(200, digital_clock)\n",
+    "time_label = tk.Label(root, font=(\"Helvetica\", 24, \"bold\"))\n",
+    "time_label.pack(pady=20)\n",
     "\n",
     "digital_clock()\n",
-    "root.mainloop()\n"
+    "root.mainloop()"
    ]
   }
  ],
@@ -324,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
